test/should-fail/jfxc3264.visage
/*
 * @test/compile-error
 */
import visage.animation.Timeline;
import visage.animation.KeyFrame;
import visage.animation.Interpolator;

var val1 = [1.0, 200.0, 250.0, 300.0];

var timeLine1 = Timeline {
    keyFrames: [
        KeyFrame { 
            time: 2s values: val1[0] => 300 tween Interpolator.LINEAR
        }
    ]
}
